// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single Recipe Page should render a preloader 1`] = `
<div
  className="page page__recipe"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
  </header>
  <Preloader />
  <Notification
    dispatch={[Function]}
    notification=""
  />
  <SiteFooter />
</div>
`;

exports[`Single Recipe Page should render recipe not found view if there is an error 1`] = `
<div
  className="page page__recipe"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
  </header>
  <div
    className="recipe-not-found"
  >
    <h1>
      <span
        aria-label="sad"
        role="img"
      >
        😢
      </span>
       Recipe Not Found
    </h1>
  </div>
  <Notification
    dispatch={[Function]}
    notification=""
  />
  <SiteFooter />
</div>
`;

exports[`Single Recipe Page should render with right amount of elements 1`] = `
<div
  className="page page__recipe"
>
  <header
    className="site-header"
  >
    <Connect(SiteNav)
      currentUser={
        Object {
          "fullname": "John Doe",
          "id": 1,
        }
      }
    />
  </header>
  <main>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col s12 m5"
        >
          <img
            alt="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
            src="http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg"
          />
        </div>
        <div
          className="col s12 m7"
        >
          <h4
            className="recipe__name"
          >
            Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref
          </h4>
          <p
            className="recipe__description"
          >
            This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.
          </p>
          <div
            className="row recipe__stats"
          >
            <RecipeStats
              favorite={[Function]}
              stats={
                Object {
                  "downVoteCount": 1,
                  "favoriteCount": 1,
                  "upVoteCount": 1,
                  "viewCount": 2,
                }
              }
              vote={[Function]}
            />
            <a
              className="write-review"
              href="#write-review"
            >
              Write Review
            </a>
          </div>
        </div>
      </div>
      <IngredientsList
        ingredients={
          Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ]
        }
      />
      <InstructionsList
        instructions={
          Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ]
        }
      />
      <Connect(Reviews)
        recipeId={5}
      />
    </div>
  </main>
  <Notification
    dispatch={[Function]}
    notification=""
  />
  <SiteFooter />
</div>
`;
